[package]
name = "scrypto_testenv"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Test environment helper for Radix Scrypto making it easier to write automatic tests"
repository = "https://github.com/ociswap/scrypto-testenv"

[dependencies]
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.11.0" }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.11.0" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.11.0" }
scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.11.0" }

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace