[package]
name = "scrypto_testenv"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "Test environment helper for Radix Scrypto making it easier to write automatic tests"
repository = "https://github.com/ociswap/scrypto-testenv"

[dependencies]
scrypto = "1.3.0"
radix-transactions = "1.3.0"
radix-engine = "1.3.0"
radix-substate-store-impls = "1.3.0"
scrypto-test = "1.3.0"
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace
